--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1749,15 +1749,17 @@ details.build-toggle {
 code.shell {
   position: relative;
 
+  display: inline-block;
+  margin: 1rem 0;
   padding: 0.75rem 1rem 0.75rem 2rem;
-
+  
   background-color: var(--color-bg-dark);
 
   &::before {
     position: absolute;
     top: 50%;
     left: 0.8rem;
-
+    
     display: block;
 
     color: var(--color-green);
