feat(dashboard): handle icon cyan in light theme

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -40,7 +40,7 @@ body.theme-light {
   --color-primary: var(--color-lavender); // ok for text
   --color-primary-light: var(--color-lavender-light);
 
-  --color-secondary-dark: var(--color-cyan-dark);
+  --color-secondary-dark: var(--color-cyan-semi-dark);
   --color-secondary: var(--color-cyan);
   --color-secondary-light: var(--color-cyan-light);
 
@@ -65,16 +65,16 @@ body.theme-light {
   }
 
   .status.-canceled {
-    background-color: var(--color-cyan-semi-dark);
+    background-color: var(--color-secondary-dark);
   }
 
   .recent-build-link .-icon.-canceled {
-    background-color: var(--color-cyan-semi-dark);
+    background-color: var(--color-secondary-dark);
   }
 
   .steps .-icon.-canceled,
   .services .-icon.-canceled {
-    stroke: var(--color-cyan-semi-dark);
+    stroke: var(--color-secondary-dark);
   }
 
   .hooks {
@@ -254,15 +254,21 @@ body.theme-light {
   background-color: var(--color-cyan-semi-dark);
 }
 
-.theme-light .dashboard-recent-builds .recent-build:not(:first-child) .-canceled {
+/* stylelint-disable selector-max-compound-selectors */
+.theme-light
+  .dashboard-recent-builds
+  .recent-build:not(:first-child)
+  .-canceled {
   background-color: var(--color-gray-lightest);
-  border-color: var(--color-cyan-semi-dark);
+  border-color: var(--color-secondary-dark);
 
-  stroke: var(--color-cyan-semi-dark);
+  stroke: var(--color-secondary-dark);
 }
 
+/* stylelint-enable selector-max-compound-selectors */
+
 .theme-light .recent-build-link.-current:has(.-canceled)::before {
-    background-color: var(--color-cyan-semi-dark);
+  background-color: var(--color-secondary-dark);
 }
 
 /*! purgecss end ignore */
