feat(dashboard): addressing feedback

--- a/src/scss/_dashboards.scss
+++ b/src/scss/_dashboards.scss
@@ -34,7 +34,7 @@
 
   background-color: var(--color-bg-darkest);
 
-  // custon styling for the status icon
+  // custom styling for the status icon
   .-icon {
     width: 2.5rem;
     height: 2.5rem;
