--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1419,21 +1419,36 @@ details.build-toggle {
 }
 
 .cmd {
+  position: relative;
   display: flex;
   justify-content: space-between;
+
+  &::before {
+    position: absolute;
+    top: 52%;
+    left: 0.5rem;
+
+    display: block;
+
+    color: var(--color-green);
+
+    transform: translateY(-52%);
+
+    content: '$';
+  }
 }
 
 .cmd-text {
   flex: 1;
   margin: 0.2rem 0;
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 1.5rem;
 
   color: var(--color-text);
 
   background-color: var(--color-bg);
   border: none;
 
-  + .button {
+  + .vert-icon-container {
     margin-left: 0.5rem;
   }
 }
