--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,6 +13,7 @@
   --color-violet: hsl(288, 55%, 57%);
 
   // grays
+  --color-coal-darkest: hsl(0, 0%, 10%);
   --color-coal-dark: hsl(0, 0%, 12%);
   --color-coal: hsl(0, 0%, 16%); // main dark bg
   --color-coal-light: hsl(0, 0%, 34%);
