--- a/src/scss/_dashboards.scss
+++ b/src/scss/_dashboards.scss
@@ -2,6 +2,39 @@
 
 // styles for the dashboard pages
 
+.beta {
+  margin-left: 0.5rem;
+  padding: 0.25rem 0.4rem;
+
+  font-size: 0.8rem;
+  vertical-align: top;
+
+  background-color: var(--color-green-dark);
+}
+
+.dashboards .item {
+  flex-wrap: wrap;
+}
+
+.dashboard-repos {
+  flex-basis: 100%;
+  margin-top: 1rem;
+  padding: 1rem 1rem 0 0;
+
+  border-top: 2px dotted var(--color-bg-light);
+}
+
+.dashboard-repos-item {
+  display: inline-block;
+  margin-right: 1rem;
+  margin-bottom: .5rem;
+  padding: .25rem .5rem;
+
+  font-size: .8rem;
+
+  background-color: var(--color-bg-darkest);
+}
+
 .dashboard-title {
   border-bottom: var(--line-width) solid var(--color-secondary);
 }
