--- a/src/scss/_dashboards.scss
+++ b/src/scss/_dashboards.scss
@@ -36,11 +36,11 @@
 
 .dashboard-repos-item {
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
   align-items: center;
-  padding: .25rem .5rem;
+  padding: 0.25rem 0.5rem;
 
-  font-size: .8rem;
+  font-size: 0.8rem;
 
   background-color: var(--color-bg-darkest);
 
