--- a/src/scss/_dashboards.scss
+++ b/src/scss/_dashboards.scss
@@ -2,6 +2,88 @@
 
 // styles for the dashboard pages
 
+.beta {
+  margin-left: 0.5rem;
+  padding: 0.25rem 0.4rem;
+
+  font-size: 0.8rem;
+  vertical-align: top;
+
+  background-color: var(--color-green-dark);
+}
+
+.dashboards .item {
+  flex-wrap: wrap;
+}
+
+.dashboard-repos {
+  display: flex;
+  flex-basis: 100%;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-top: 1rem;
+  padding: 1rem 1rem 0 0;
+
+  border-top: 2px dotted var(--color-bg-light);
+}
+
+.dashboard-item-title code {
+  margin-left: 1rem;
+
+  color: var(--color-bg-light);
+  font-size: 1rem;
+}
+
+.dashboard-repos-item {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  padding: 0.25rem 0.5rem;
+
+  font-size: 0.8rem;
+
+  background-color: var(--color-bg-darkest);
+
+  .-icon {
+    width: 1rem;
+    height: 1rem;
+
+    fill: none;
+
+    &.-running {
+      background-color: var(--color-yellow);
+
+      stroke: var(--color-bg);
+    }
+
+    &.-failure,
+    &.-error {
+      background-color: var(--color-red);
+
+      stroke: var(--color-bg);
+    }
+
+    &.-canceled {
+      background-color: var(--color-cyan-dark);
+
+      stroke: var(--color-bg);
+    }
+
+    &.-success {
+      background-color: var(--color-green);
+
+      stroke: var(--color-bg);
+    }
+
+    &.-pending {
+      background-color: var(--color-bg-light);
+
+      fill: var(--color-bg);
+      stroke: var(--color-bg);
+    }
+  }
+}
+
 .dashboard-title {
   border-bottom: var(--line-width) solid var(--color-secondary);
 }
