--- a/src/scss/_pipelines.scss
+++ b/src/scss/_pipelines.scss
@@ -24,6 +24,31 @@
       border-left: 1px solid var(--color-green);
     }
   }
+
+  .commit {
+    margin: 0.2rem 0.6rem;
+    padding: 0.4rem 0.4rem;
+
+    color: var(--color-text);
+    font-size: 0.9rem;
+
+    background-color: var(--color-bg);
+  }
+
+  .tip {
+    display: flex;
+    padding-bottom: 0.4rem;
+
+    border-bottom: 1px solid var(--color-bg-light);
+
+    small {
+      display: inline-block;
+      margin: 0.4rem 0.4rem 0 0.4rem;
+      padding: 0.2rem 0.4rem;
+
+      background-color: var(--color-bg-light);
+    }
+  }
 }
 
 .templates {
@@ -38,6 +63,7 @@
     padding-right: 1rem;
     padding-left: 1rem;
   }
+
   margin-bottom: 1rem;
   padding: 0.8rem 0 0.8rem 0;
 
@@ -178,5 +204,53 @@
 
   .logs-table .logs {
     padding-bottom: 1rem;
+  }
+}
+
+.pipeline .warnings {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.8rem;
+  padding: 0.6rem 0.4rem 0.6rem 0;
+
+  .no-line-number {
+    display: block;
+    width: 6ch;
+
+    font-family: var(--font-code);
+    text-align: right;
+  }
+}
+
+tr.warning,
+.line.-warning .wrapper {
+  position: relative;
+}
+
+.warnings .-link.-disabled {
+  color: var(--color-bg-light);
+}
+
+.annotation {
+  padding: 0;
+
+  .-warning {
+    fill: var(--color-yellow);
+    stroke: var(--color-yellow);
+  }
+
+  &.-hide {
+    visibility: hidden;
+  }
+
+  &.-show:before {
+    position: absolute;
+
+    width: 1px;
+    height: 100%;
+
+    background-color: var(--color-yellow);
+
+    content: '';
   }
 }
