--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1787,3 +1787,14 @@ code.shell {
     content: '$';
   }
 }
+
+.testing-section {
+  background-color: red;
+}
+
+.config-parameters-inputs {
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: .2rem;
+  display: flex;
+}
