--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1610,15 +1610,35 @@ details.build-toggle {
   margin-top: 0.2rem;
 }
 
+.config-parameters-input-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 0.2rem;
+  margin-bottom: 2em;
+}
+
 .config-parameters-input {
   display: flex;
   flex-direction: row;
   width: 100%;
+  select {
+    margin-right: 1rem;
+    flex: 1;
+  }
 }
 
 .image-input,
 .parameter-input {
   margin-right: 1rem;
+}
+
+.parameter-input-number {
+  flex: 1;
+  margin-right: 1rem;
+  input {
+    flex: 1;
+  }
 }
 
 .images,
@@ -1788,13 +1808,13 @@ code.shell {
   }
 }
 
-.testing-section {
-  background-color: red;
-}
-
 .config-parameters-inputs {
   flex-direction: column;
   align-items: flex-start;
   margin-top: .2rem;
-  display: flex;
+}
+
+select {
+  background-color: var(--color-bg-dark);
+  color: var(--color-text);
 }
