--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1811,7 +1811,7 @@ code.shell {
 .config-parameters-inputs {
   flex-direction: column;
   align-items: flex-start;
-  margin-top: .2rem;
+  margin-top: 0.2rem;
 }
 
 select {
@@ -1820,46 +1820,46 @@ select {
 }
 
 .custom-select-container {
-    flex: 1;
-    margin-right: 1rem;
+  flex: 1;
+  margin-right: 1rem;
 }
 
 .custom-select-selected {
-    background-color: var(--color-bg-dark);
-    border: 1px solid #ccc;
-    padding: 10px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: var(--color-bg-dark);
+  border: 1px solid #ccc;
+  padding: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .custom-select-selected .arrow {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .custom-select-options {
-    display: none;
-    position: absolute;
-    background-color: var(--color-bg-dark);
-    border: 1px solid #ccc;
-    z-index: 1;
-    width: 75%;
+  display: none;
+  position: absolute;
+  background-color: var(--color-bg-dark);
+  border: 1px solid #ccc;
+  z-index: 1;
+  width: 75%;
 }
 
 .custom-select-options .custom-select-option {
-    padding: 10px;
-    cursor: pointer;
+  padding: 10px;
+  cursor: pointer;
 }
 
 .custom-select-options .custom-select-option:hover {
-    background-color: var(--color-bg-light);
+  background-color: var(--color-bg-light);
 }
 
 .custom-select-options.hidden {
-    display: none;
+  display: none;
 }
 
 .custom-select-container .custom-select-options:not(.hidden) {
-    display: block;
+  display: block;
 }
