--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -318,3 +318,59 @@
 
   border-bottom: 1px solid var(--color-bg);
 }
+
+select {
+  color: var(--color-text);
+
+  background-color: var(--color-bg-dark);
+}
+
+.custom-select-container {
+  flex: 1;
+  margin-right: 1rem;
+}
+
+.custom-select-selected {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+
+  background-color: var(--color-bg-dark);
+  border: 1px solid var(--color-bg-light);
+  cursor: pointer;
+}
+
+.custom-select-selected .arrow {
+  margin-left: 10px;
+}
+
+.custom-select-options {
+  position: absolute;
+  z-index: 1;
+
+  display: none;
+  width: 75%;
+
+  background-color: var(--color-bg-dark);
+  border: 1px solid var(--color-bg-light);
+}
+
+.custom-select-options .custom-select-option {
+  padding: 10px;
+
+  cursor: pointer;
+}
+
+.custom-select-options .custom-select-option:hover,
+.custom-select-options .custom-select-option:focus {
+  background-color: var(--color-bg-light);
+}
+
+.custom-select-options.hidden {
+  display: none;
+}
+
+.custom-select-container .custom-select-options:not(.hidden) {
+  display: block;
+}
