feat(test attachments): add message when no attachments

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1061,7 +1061,8 @@ details.build-toggle {
 }
 
 .no-steps,
-.no-services {
+.no-services,
+.no-attachments {
   padding: 1rem 1rem;
 
   background-color: var(--color-bg-dark);
