feat(artifacts): remove reports layer and chg test attachments to artifacts

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1062,7 +1062,7 @@ details.build-toggle {
 
 .no-steps,
 .no-services,
-.no-attachments {
+.no-artifacts {
   padding: 1rem 1rem;
 
   background-color: var(--color-bg-dark);
