fix linter errors

--- a/src/scss/_artifacts.scss
+++ b/src/scss/_artifacts.scss
@@ -36,8 +36,7 @@
 
 .table-base td.created-at-col {
   white-space: normal;
-  word-wrap: break-word;
-  overflow-wrap: anywhere;
+  overflow-wrap: break-word;
 }
 
 .table-base td.expires-at-col,
@@ -47,8 +46,7 @@
 
 .table-base td.expires-at-col {
   white-space: normal;
-  word-wrap: break-word;
-  overflow-wrap: anywhere;
+  overflow-wrap: break-word;
 }
 
 .table-base td.file-size-col,
