--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -21,7 +21,7 @@
   height: 1px;
   overflow: hidden;
 
-  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: rect(1px, 1px, 1px, 1px);
 
   @if $focusable == true {
     &:active,
@@ -32,7 +32,7 @@
       height: auto;
       overflow: visible;
 
-      clip: auto;
+      clip-path: auto;
     }
   }
 }
